Modificada la creacion de la base de datos automatica. Crea sólo la tabla de usuario.

--- a/TWB_Practica/WebContent/WEB-INF/classes/ApplicationResources_es.properties
+++ b/TWB_Practica/WebContent/WEB-INF/classes/ApplicationResources_es.properties
@@ -39,6 +39,7 @@ display.link=Volver a página de inicio
 label.userName= Nombre de ususario --> 
 notfound.title=No encontrado usuario!
 notfound.message=&nbsp;no encontrado
+tohome.link=Volver a página de inicio
 
 # Struts Validator Error Messages
 errors.required={0} is required.
